  * Changed the default setting for featuredigittimeout to 2000 ms from 500 ms.

Language Support Changes
------------------------
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added
  * Added support for the Hungarian language for saying numbers, dates, and times.

AGI Changes
-----------
  * Added SPEECH commands for speech recognition. A complete listing can be found
     using agi show.
  * If app_stack is loaded, GOSUB is a native AGI command that may be used to
    invoke subroutines in the dialplan.  Note that calling EXEC with Gosub
    does not behave as expected; the native command needs to be used, instead.
  * Added the ability to perform SRV lookups on fast AGI calls. To use this
    feature, simply use hagi: instead of agi: as the protocol portion
    of the URI parameter to the AGI function call in your dial plan. Also note
    that specifying a port number in the AGI URI will disable SRV lookups,
    even if you use the hagi: protocol.

Logger changes
--------------
  * Added rotatestrategy option to logger.conf, along with two new options:
     "timestamp" which will use the time to name the logger files instead of
     sequence number; and "rotate", which rotates the names of the log files,
     similar to the way syslog rotates files.
  * Added exec_after_rotate option to logger.conf, which allows a system
     command to be run after rotation.  This is primarily useful with
     rotatestrategy=rotate, to allow a limit on the number of log files kept
     and to ensure that the oldest log file gets deleted.
  * Added realtime support for the queue log

Call Detail Records 
-------------------
  * The cdr_manager module has a [mappings] feature, like cdr_custom,
    to add fields to the manager event from the CDR variables.
  * Added cdr_adaptive_odbc, a new module that adapts to the structure of your
     backend database CDR table.  Specifically, additional, non-standard